<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Icons refresh and search for Blue Grey theme -->

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/refresh_green"
        android:showAsAction="always"
        android:title="@string/refresh" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_green"
        android:showAsAction="always"
        android:title="@string/search" />

    <item
        android:id="@+id/random"
        android:icon="@drawable/ic_launcher"
        android:title="@string/random" />
    <item
        android:id="@+id/sort_up"
        android:icon="@drawable/ic_launcher"
        android:title="@string/sort_a_to_z" />
    <item
        android:id="@+id/sort_down"
        android:icon="@drawable/ic_launcher"
        android:title="@string/sort_z_to_a" />
    <item
        android:id="@+id/rate_app"
        android:icon="@drawable/ic_launcher"
        android:title="@string/rate_app" />
    <item
        android:id="@+id/more_apps"
        android:icon="@drawable/ic_launcher"
        android:title="@string/more_apps" />

</menu>