<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_grey_100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/header_our_team" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4c000000" />

            <TextView
                android:id="@+id/about_us_text_on_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/about_us_text_on_image"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/about_us_header_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/about_us_header_text"
                android:textColor="@color/main_color_grey_800"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/about_us_subheader_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                android:textSize="15sp"
                android:textColor="@color/main_color_grey_600"
                android:text="@string/about_us_subheader_text" />

            <TextView
                android:id="@+id/about_us_first_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_lorem_ipsum"
                android:textColor="@color/main_color_grey_600"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/about_us_second_italic_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/about_us_lorem_ipsum_short"
                android:textColor="@color/main_color_grey_600"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>